# crashburn

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example_clickable.cpp  example_md2.cpp  example_tga.cpp
include/crashburn/: crashburn.h
include/crashburn/engine/: 2d_text.h  clickable.h  engine.h
include/crashburn/loaders/: md2_loader.h  mesh_loader.h  tga_loader.h
include/crashburn/scene/: intro.h  menu.h  scene.h
src/: main.cpp
src/engine/: 2d_text.cpp  clickable.cpp  engine.cpp
src/loaders/: md2_loader.cpp  tga_loader.cpp
src/scene/: intro.cpp  menu.cpp  scene.cpp
src/tests/: md2_loaderTest.cpp
tests/: CMakeLists.txt  test_drawtext.cpp  test_tga.cpp
tests/data/: mouahahahaha.md2  weapon.md2
