CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(crashburn)

# ============= EXTERNAL LIBRARIES ===============
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

# GLFW
FIND_PACKAGE(GLFW REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIR})

# =============== MAIN EXECUTABLE ================
FILE(GLOB_RECURSE CRASHBURN_SOURCES src/*.cpp)
INCLUDE_DIRECTORIES( include )
ADD_EXECUTABLE(crashburn ${CRASHBURN_SOURCES})
TARGET_LINK_LIBRARIES(crashburn ${GLFW_LIBRARY} ${OPENGL_LIBRARIES})
